Update autogen types
